<resources>
    <string name="app_name">iTownship</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_about_i_township">About_iTownship</string>
    <string name="about_itownship">About iTownship</string>
    <string name="contacts">Contacts</string>
    <string name="vr">VR</string>
    <string name="feature">feature</string>
    <string name="ourteam">Our team</string>
    <string name="sign_in">sign in</string>
    <string name="logo">logo</string>
    <string name="abtv1">->       I-Township is web based portal. In this project, We are going to develop the java based software which involves management of a Society. In this portal, the chairman of society suggests the idea for completing such tasks. This task involves management of society from different areas of interest.</string>
    <string name="abtv2">->       By accessing this portal user can view whether the work of society has done or not, can complain, give suggestion, take part in E-voting, view a VR sitemap on the portal. The chairman maintains detail about all the Modules.</string>
    <string name="abtv3">->       It is very useful for the members of society. The portal provides the notifications on an android application, gives attractive user interaction functionalities. So we can achieve more suggestions from user and task will be performed in proper manner.</string>
    <string name="abtv0">Abstract</string>
    <string name="title_activity_our__team">Our_Team</string>

    <string name="ottv1">Photo</string>
    <string name="ottv2">Name (Contact No.)</string>
    <string name="dp">datt</string>
    <string name="dptv">Datt Patel (7567980607)</string>
    <string name="kmktv">Mayur Kanojiya (7600006753)</string>
    <string name="rjtv">Ronak Janani (9913992249)</string>
    <string name="kmkimg">kmk</string>
    <string name="rjimg">rj</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="ctv0">Category</string>
    <string name="ctv1">Name(No.)</string>
    <string name="ctv2">Secretary</string>
    <string name="ctv3">Aatmaram Bhide (7654106868)</string>
    <string name="ctv4">Watchman</string>
    <string name="ctv5">Ramu kaka (9854106778)</string>
    <string name="ctv6">Postman</string>
    <string name="ctv7">Arpit color (9856413778)</string>
    <string name="ctv8">Electrician</string>
    <string name="ctv9">Rajan chhote (9354137354)</string>
    <string name="ctv10">Cleaner</string>
    <string name="ctv11">Sourabh (5186497354)</string>
    <string name="title_activity_feature">Feature</string>

    <string name="ftv0">Features</string>
    <string name="ftv1">Expense Manager</string>
    <string name="ftv2">Meeting Manager</string>
    <string name="ftv3">Resident Manager</string>
    <string name="ftv4">Website Manager</string>
    <string name="title_activity_expense__manager">Expense_Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_meeting__manager">Meeting_Manager</string>
    <string name="title_activity_resident__manager">Resident_Manager</string>
    <string name="title_activity_websit__manager">Websit_Manager</string>
    <string name="WMimg">WM</string>
    <string name="wmtv0"><![CDATA[A> Space on a website is practically limitless, and it can hold text, images, audio, and video, making it more versatile than any other marketing platform in the world.]]></string>
    <string name="wmtv1"><![CDATA[B> Handle online marketing projects ranging from SEO to social media marketing.]]></string>
    <string name="wmtv2"><![CDATA[C> Ensure website functionality and perform software updates.]]></string>
    <string name="wmtv3"><![CDATA[D> Monitor, assess, and report on website performance.]]></string>
    <string name="wmtv4"><![CDATA[E> Ensure domain registration and hosting are current.]]></string>
    <string name="wmtv5"><![CDATA[F> Develop and/or update content.]]></string>
    <string name="MMimg">MM</string>
    <string name="mmtv0"><![CDATA[A> Manager roles can be created for Office Staff.]]></string>
    <string name="mmtv1"><![CDATA[B> Discuss Facility Management Issues and other Improvement Areas within the Admin Team.]]></string>
    <string name="mmtv2"><![CDATA[C>Close the Meeting and share the Report by Email to all Invitees.]]></string>
    <string name="mmtv3"><![CDATA[D> Verify if all documents have been submitted by member and generate defaulters report.]]></string>
    <string name="RMimg">RM</string>
    <string name="rmtv0"><![CDATA[A> Resident accounts can be added, approved, deactivated.Bulk upload from spreadsheet to create Resident Accounts.]]></string>
    <string name="rmtv1"><![CDATA[B> Admin Access to users provided from this Application.]]></string>
    <string name="rmtv2"><![CDATA[C> Manager roles can be created for Office Staff.]]></string>
    <string name="rmtv3"><![CDATA[D> Search on Any Family Information, Vehicle Information, User, Part Phone number etc.]]></string>
    <string name="EMimg">EM</string>
    <string name="emtv0"><![CDATA[A> Residents can pay their dues online through Payment Gateway provided by PayU.]]></string>
    <string name="emtv1"><![CDATA[B> Instant E-Receipts is generated and their Dues get cleared off.]]></string>
    <string name="emtv2"><![CDATA[C> Facility Booking, Move in/out charges, Festival ticketing can all be done easily through Payment Gateway.]]></string>
    <string name="emtv3"><![CDATA[D> Verify if all documents have been submitted by member and generate defaulters report.]]></string>

</resources>
