<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.itownship.datt.itownship.Our_Team"
    android:background="@drawable/background"
    android:id="@+id/ourTeam">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ottv1"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff790106"
        android:textStyle="bold"
        android:textColor="#e67d00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ottv2"
        android:id="@+id/textView5"
        android:background="#FF790106"
        android:autoText="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#e67d00"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="false"
        android:background="@drawable/datt"
        android:contentDescription="@string/dp" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:background="#FF790106"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="43dp"
        android:text="@string/dptv" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView3"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/mayur"
        android:contentDescription="@string/kmkimg" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/kmktv"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="30dp"
        android:background="#FF790106"
        android:textColor="#fff" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/ronak"
        android:contentDescription="@string/rjimg" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rjtv"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:autoText="false"
        android:background="#FF790106" />
</RelativeLayout>
