<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="com.itownship.datt.itownship.Expense_Manager"
    android:background="@drawable/background"
    android:id="@+id/WM">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:id="@+id/imageView5"
        android:background="@drawable/websitemanager"
        android:contentDescription="@string/WMimg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wmtv0"
        android:id="@+id/textView22"
        android:textColor="#e67d00"
        android:background="#ff790106"
        android:layout_below="@+id/imageView5"
        android:layout_alignLeft="@+id/textView24"
        android:layout_alignStart="@+id/textView24"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/textView24"
        android:layout_alignEnd="@+id/textView24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wmtv1"
        android:id="@+id/textView23"
        android:textColor="#e67d00"
        android:background="#ff790106"
        android:layout_below="@+id/textView22"
        android:layout_alignLeft="@+id/textView22"
        android:layout_alignStart="@+id/textView22"
        android:layout_alignRight="@+id/textView25"
        android:layout_alignEnd="@+id/textView25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wmtv2"
        android:id="@+id/textView24"
        android:textColor="#e67d00"
        android:background="#ff790106"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wmtv3"
        android:id="@+id/textView25"
        android:textColor="#e67d00"
        android:background="#ff790106"
        android:layout_below="@+id/textView24"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wmtv4"
        android:id="@+id/textView26"
        android:textColor="#e67d00"
        android:background="#ff790106"
        android:layout_below="@+id/textView25"
        android:layout_alignLeft="@+id/textView25"
        android:layout_alignStart="@+id/textView25"
        android:layout_alignRight="@+id/textView25"
        android:layout_alignEnd="@+id/textView25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wmtv5"
        android:id="@+id/textView27"
        android:textColor="#e67d00"
        android:background="#ff790106"
        android:layout_below="@+id/textView26"
        android:layout_alignLeft="@+id/textView26"
        android:layout_alignStart="@+id/textView26"
        android:layout_alignRight="@+id/textView26"
        android:layout_alignEnd="@+id/textView26" />
</RelativeLayout>
