<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.itownship.datt.itownship.About_iTownship"
    android:background="@drawable/background"
    android:backgroundTintMode="add"
    android:id="@+id/aboutiTownshippage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/abtv0"
        android:id="@+id/aabstract"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#e67d00"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="#ff790106" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/abtv1"
        android:id="@+id/textView"
        android:layout_below="@+id/aabstract"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#e67d00"
        android:background="#ff790106" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/abtv2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#ff790106"
        android:textColor="#e67d00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/abtv3"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="#e67d00"
        android:background="#ff790106" />
</RelativeLayout>
